--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
+  color: #e2e3ed;
 }
 
 ul, 
@@ -153,6 +154,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #202322;
 }
 
 header {
@@ -160,6 +162,7 @@ header {
 }
 
 header .content-wrapper {
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -167,6 +170,9 @@ header .content-wrapper {
 }
 
 header nav {
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -178,12 +184,13 @@ header nav ul {
   display: flex;
   justify-content: space-around;
   width: 100%;
-  margin: 0;
 }
 
 .header-divider {
   width: 100%;
   margin: 10px 0 20px 0;
+  height: 1px;
+  background-color: #e2e3ed;
 }
 
 footer .content-wrapper {
@@ -236,6 +243,13 @@ footer .copyright {
   flex-flow: row wrap;
 }
 
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif; 
+  line-height: 1.2;
+  font-weight: 500;
+}
+
 /* Aside */ 
 
 aside {
@@ -243,18 +257,38 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background: #527158;
 }
 
 aside h3 {
   margin: 20px 0;
 }
 
-/***
-
-aside p {
-  padding-bottom: 30px; ??
-
-  ***/
+aside .form {
+  margin-top: 30px;
+}
+ 
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+ 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
 
 /* Features */
 
@@ -273,6 +307,14 @@ aside p {
 
 .features .fontawesome-icon {
   padding-bottom: 40px;
+  
+}
+
+.features .features-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .features .features-item-description {
@@ -293,6 +335,7 @@ aside p {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
 
 .reviews h2 {
@@ -312,6 +355,7 @@ aside p {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background: #527158;
 }
 
 .contact-section {
@@ -319,6 +363,7 @@ aside p {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background: #2a423a;
 }
 
 /* ==========================================================================
@@ -330,15 +375,24 @@ aside p {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background: #527158;
 }
 
 .faq .content-wrapper {
+  margin: 50px 0 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
 
+.faq h2 {
+  margin-bottom: 40px;
+}
+
+.faq-content {
+  margin-bottom: 50px
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -429,10 +483,29 @@ aside p {
 
 @media only screen and (min-width: 768px) {
   .content-wrapper {
-    width: 640px;
+    max-width: 640px;
     margin: 100px 0;
   }
 
+  h1 {
+    font-size: 3em;
+    line-height: 3;
+  }
+
+  h2 {
+    font-size: 2.25em;
+    line-height: 3;
+  }
+
+  h3 {
+    font-size: 1.5;
+    line-height: 1.875;
+  }
+
+  p {
+    font-size: 1.125em;
+    line-height: 1.5em;
+  }
   /* Header */
   
   header {
@@ -441,8 +514,8 @@ aside p {
   }
 
   header .content-wrapper {
-    justify-content: space-between;
     width: 100%;
+    justify-content: space-between;
   }
 
   header nav {
@@ -511,12 +584,21 @@ aside p {
     align-items: center;
   }
 
+  footer p {
+    line-height: 1.125;
+  }
   footer .contact {
     margin-bottom: 0;
   }
 
+  footer .contact h4 {
+    font-size: 1.5em;
+  }
+
   footer .copyright {
     width: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   /* ==========================================================================
@@ -558,9 +640,37 @@ aside p {
   .faq h2 {
     width: 100%;
   }
+
+  .faq h4,
+  .faq p {
+    font-size: 0.875em;
+    line-height: 0.9;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
+  
+  h1 {
+    font-size: 3.75em;
+  }
+
+  h2 {
+    font-size: 2.25em;
+  }
+  
+  h3,
+  h4 {
+    font-size: 1.875em;
+  }
+  
+  p {
+    font-size: 1.125em;
+    line-height: 1.5;
+  }
+  header {
+    padding: 15px 0;
+  }
+
   .content-wrapper {
     max-width: 960px;
   }
@@ -600,6 +710,7 @@ aside p {
 
    .mission h2 {
     width: 90%;
+    font-size: 3em;
    }
 
     /* ==========================================================================
@@ -608,6 +719,13 @@ aside p {
 
    .faq h2 {
     width: 100%;
+    font-size: 3em;
+   }
+
+   .faq h4
+   .faq p {
+      font-size: 1.125em;
+      line-height: 1.125em;
    }
 }
 
