Added logo and images

--- a/css/main.css
+++ b/css/main.css
@@ -97,13 +97,12 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
   color: #e2e3ed;
+  text-align: left;
 }
 
 ul, 
 ol {
   list-style-type: none;
-  font-size: 1.125em;
-  font-weight: bold;
 }
 
 a {
@@ -122,19 +121,20 @@ h4 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.125em;
   font-weight: 500;
+  margin: 20px 0;
 }
 
 p {
   font-size: 0.875em;
-  line-height: 1.125em;
+  line-height: 1.285em;
 }
 
 img {
-
+  width: 100%;
 }
 
 figure {
-
+  margin: 0;
 }
 
 address {
@@ -161,6 +161,14 @@ header {
   padding: 15px 0;
 }
 
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
 header .content-wrapper {
   margin: 0;
   display: flex;
@@ -184,6 +192,11 @@ header nav ul {
   display: flex;
   justify-content: space-around;
   width: 100%;
+  padding-left: 10px;
+}
+
+header nav ul li {
+  font-size: 1.125em;
 }
 
 .header-divider {
@@ -193,24 +206,22 @@ header nav ul {
   background-color: #e2e3ed;
 }
 
+footer {
+  text-align: center;
+  flex-direction: column;
+}
+
+footer p {
+  margin: 0;
+}
+
 footer .content-wrapper {
   width: 55%;
   margin: 50px 0;
 }
 
-footer {
-  flex-direction: column;
-}
-
 footer .contact {
   margin-bottom: 50px;
-}
-footer p {
-  margin: 0;
-}
-
-.footer h4 {
-  margin: 20px 0;
 }
 
 footer .social-icons {
@@ -219,16 +230,12 @@ footer .social-icons {
   align-items: center;
 }
 
-footer .social {
-  margin: 50px 0;
-}
-
-footer .social p {
+footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0;
 }
+
 
 footer .copyright {
   margin: 20px 0;
@@ -241,6 +248,9 @@ footer .copyright {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url('../img/unplugged-retreat.jpg') center no-repeat #333;
+  background-size: cover; 
+  min-height: 500px;
 }
 
 .hero-area h1 {
@@ -258,10 +268,6 @@ aside {
   align-items: center;
   flex-flow: row wrap;
   background: #527158;
-}
-
-aside h3 {
-  margin: 20px 0;
 }
 
 aside .form {
@@ -296,12 +302,17 @@ input[type=button] {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url('../img/unplugged-retreat-features.jpg') center no-repeat #333;
+  background-size: cover;
 }
+
 .features h2 {
   margin-bottom: 60px;
+  width: 85%;
 }
 
 .features p {
+  text-align: center;
   margin: 0;
 }
 
@@ -339,11 +350,13 @@ input[type=button] {
 }
 
 .reviews h2 {
-  padding-bottom: 40px;
+  margin-bottom: 40px;
+  line-height: 1;
 }
+
 .reviews h3 {
   width: 50%;
-  padding: 20px 0;
+  margin: 20px 0;
 }
 
 /* ==========================================================================
@@ -364,6 +377,10 @@ input[type=button] {
   align-items: center;
   flex-flow: row wrap;
   background: #2a423a;
+}
+
+.contact-content p {
+  margin: 0;
 }
 
 /* ==========================================================================
@@ -388,11 +405,17 @@ input[type=button] {
 
 .faq h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .faq-content {
   margin-bottom: 50px
 }
+
+.faq-content h4 {
+  line-height: 1.3;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -482,35 +505,33 @@ input[type=button] {
    ========================================================================== */
 
 @media only screen and (min-width: 768px) {
+  /* Tablet styles here */
   .content-wrapper {
     max-width: 640px;
     margin: 100px 0;
   }
 
-  h1 {
-    font-size: 3em;
-    line-height: 3;
-  }
-
+  
   h2 {
     font-size: 2.25em;
-    line-height: 3;
+    line-height: 1.2;
   }
 
   h3 {
     font-size: 1.5;
-    line-height: 1.875;
+    line-height: 1.2;
   }
 
-  p {
-    font-size: 1.125em;
-    line-height: 1.5em;
-  }
+
   /* Header */
   
   header {
     justify-content: space-around;
     padding: 33px 0;
+  }
+
+  header figure {
+    width: 30%;
   }
 
   header .content-wrapper {
@@ -519,7 +540,7 @@ input[type=button] {
   }
 
   header nav {
-    width: 22%;
+    width: 20%;
   }
 
   header nav ul {
@@ -531,6 +552,16 @@ input[type=button] {
   }
 
   /* Hero Area */
+
+  .hero-area {
+    min-height: 600px;
+  }
+
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+  }
 
   /* Aside */
 
@@ -549,6 +580,10 @@ input[type=button] {
 
   /* Features */
 
+  .features h2 {
+    margin-bottom: 20px;
+  }
+
   .features article { 
     display: flex;
     justify-content: center;
@@ -558,7 +593,7 @@ input[type=button] {
   }
   
   .features .features-item-description {
-    width: 50%;
+    width: 60%;
   }
 
   /* Reviews */
@@ -567,10 +602,19 @@ input[type=button] {
     justify-content: space-between;
   }
 
-  .reviews article div {
-    width: 50%;
+  .reviews h2 {
+    width: 85%;
   }
 
+  .reviews article figure,
+  .reviews article div {
+    width: 49%;
+  }
+
+  .reviews h3 {
+    width: 75%;
+    margin: 0;
+  }
   /* Footer */
 
   footer .content-wrapper {
@@ -578,21 +622,24 @@ input[type=button] {
     margin: 100px 0;
   }
 
-  .footer-content {
+  footer .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: row;
   }
 
   footer p {
-    line-height: 1.125;
+    line-height: 1.285;
   }
+
   footer .contact {
     margin-bottom: 0;
   }
 
-  footer .contact h4 {
+  footer h4 {
     font-size: 1.5em;
+    margin-bottom: 40px;
   }
 
   footer .copyright {
@@ -626,6 +673,10 @@ input[type=button] {
     align-items: center;
   }
 
+  .contact-content h4 {
+    font-size: 1.5em
+  }
+
   /* ==========================================================================
    FAQ Page
    ========================================================================== */
@@ -650,9 +701,6 @@ input[type=button] {
 
 @media only screen and (min-width: 1200px) {
   
-  h1 {
-    font-size: 3.75em;
-  }
 
   h2 {
     font-size: 2.25em;
@@ -665,8 +713,9 @@ input[type=button] {
   
   p {
     font-size: 1.125em;
-    line-height: 1.5;
+    line-height: 1.333;
   }
+
   header {
     padding: 15px 0;
   }
@@ -677,7 +726,8 @@ input[type=button] {
 
   /* Hero */
   .hero-area h1 {
-    width: 70%;
+    font-size: 3.75em;
+    width: 80%;
   }
 
   /* Aside */
@@ -688,6 +738,10 @@ input[type=button] {
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
     width: 30%;
+  }
+
+  .form-description p {
+    font-size: 1.125em;
   }
 
   /* Features */
@@ -701,16 +755,31 @@ input[type=button] {
 
   /* Reviews */
   .reviews article div {
-    width: 45%;
+    width: 42%;
+  }
+
+  .reviews h2 {
+    padding-bottom: 50px;
+  }
+
+  /* Footer */
+
+  footer h4 {
+    font-size: 1.875em;
   }
 
    /* ==========================================================================
    About Page
    ========================================================================== */
 
-   .mission h2 {
-    width: 90%;
+   .mission h2,
+   .contact-section .content-wrapper h2 {
+    width: 95%;
     font-size: 3em;
+   }
+
+   .contact-content h4 {
+    font-size: 1.875em;
    }
 
     /* ==========================================================================
