--- a/css/main.css
+++ b/css/main.css
@@ -679,6 +679,10 @@ input[type=button] {
     width: 45%;
   }
 
+  .map figure {
+    padding-bottom: 54.6%;
+  }
+
   .contact-section .content-wrapper h2 {
     width: 78%;
   }
@@ -793,6 +797,10 @@ input[type=button] {
     width: 95%;
     font-size: 3em;
    }
+
+   .map figure {
+    padding-bottom: 46.9%;
+  }
 
    .contact-content h4 {
     font-size: 1.875em;
