--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,10 @@ input[type=button] {
   flex-flow: row wrap;
 }
 
+.features i {
+  font-size: 3.75em;
+}
+
 .features .features-item-description {
   display: flex;
   justify-content: center;
